--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,17 @@
     </head>
 
     <body>
-        <h1>Hello world!</h1>
-        <div>This page is template</div>
-        <div>
-           <ol>
-                {% for good in goods %}
-                <li>{{ good }}</li>
-                {% endfor %}
-            </ol> 
-        </div>
+
+        <h2>Сайт инвентаризации</h2>
+        <form action="/add/" method="POST">
+            <input type="text" name="good">
+            <button>Добавить</button>
+        </form>
+        <ol>
+            {% for good in goods %}
+            <li>{{ good }}</li>
+            {% endfor %}
+        </ol> 
         
     </body>
 </html>
